[Mingle 7758] - Air Filter Dimensions - fixing z-index for mobile dropdowns

--- a/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_components/less/components/airFilterDimension/airFilterDimension.mobile.less
+++ b/sears-partsdirect-vault/src/main/content/jcr_root/etc/designs/searspartsdirect/clientlib_components/less/components/airFilterDimension/airFilterDimension.mobile.less
@@ -33,11 +33,10 @@
                     .responsiveDropdown{
                         min-width: 40%;
                         margin-bottom: 20px;
-
                         ul {
 
                           &.active {
-                            z-index: 10000;
+
                           }
                             li {
                                 border: 4px solid red;
